[gd_scene load_steps=6 format=4 uid="uid://1uvdcqe0ggyb"]

[ext_resource type="Script" uid="uid://bgeam1jcwdm72" path="res://addons/project_plugin/scripts/Room.gd" id="1_povyf"]
[ext_resource type="Texture2D" uid="uid://b6vsdeiwyvq88" path="res://assets/tilesets/background.png" id="2_ad3mr"]
[ext_resource type="TileSet" uid="uid://dv0qqpljbexgc" path="res://resources/tileSets.tres" id="3_3pbao"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_povyf"]
size = Vector2(205.5, 48.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ad3mr"]
size = Vector2(90.75, 870.125)

[node name="Room" type="Node2D" node_paths=PackedStringArray("tp_right", "tp_bottom", "player_spawn")]
script = ExtResource("1_povyf")
tp_right = NodePath("tp_right")
tp_bottom = NodePath("tp_bottom")
player_spawn = [NodePath("Marker2D"), NodePath("Marker2D/Marker2D"), NodePath("Marker2D/Marker2D/Marker2D")]
metadata/_custom_type_script = "uid://bgeam1jcwdm72"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -1192.0
offset_top = -147.99998
offset_right = -512.04004
offset_bottom = 28.000015
scale = Vector2(5, 5)
pivot_offset = Vector2(69.19998, 43.6)
texture = ExtResource("2_ad3mr")
stretch_mode = 1

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADy/w0AAgASAAcAAADy/w4AAgASAAgAAADy/w8AAgASAAkAAADz/w0AAgATAAcAAADz/w4AAgATAAgAAADz/w8AAgATAAkAAADy/xAAAgASAAoAAADz/xAAAgATAAoAAADi/w4AAgAHAAkAAADj/w4AAgAIAAkAAADk/w0AAgAHAAkAAADk/w4AAgAHAAoAAADl/w0AAgAIAAkAAADl/w4AAgAIAAoAAADm/w0AAgAKAAkAAADm/w4AAgAKAAoAAADn/w0AAgALAAkAAADn/w4AAgALAAoAAADo/w4AAgAKAAkAAADp/w4AAgALAAkAAADf/xAAAgAIAAkAAADg/w8AAgAHAAkAAADg/xAAAgAHAAoAAADh/w8AAgAIAAkAAADh/xAAAgAIAAoAAADi/w8AAgAHAAoAAADi/xAAAgAHAAoAAADj/w8AAgAIAAoAAADj/xAAAgAIAAoAAADk/w8AAgAHAAoAAADk/xAAAgAHAAoAAADl/w8AAgAIAAoAAADl/xAAAgAIAAoAAADm/w8AAgAKAAoAAADm/xAAAgAKAAoAAADn/w8AAgALAAoAAADn/xAAAgALAAoAAADo/w8AAgAKAAoAAADo/xAAAgAKAAoAAADp/w8AAgALAAoAAADp/xAAAgALAAoAAADq/w8AAgAKAAkAAADq/xAAAgAKAAoAAADr/w8AAgALAAkAAADr/xAAAgALAAoAAADs/xAAAgAIAAkAABA=")
tile_set = ExtResource("3_3pbao")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(29, -7)
tile_map_data = PackedByteArray("AAAAABAAAgAOAAYAAAAAABEAAgAOAAcAAAABABAAAgAPAAYAAAABABEAAgAPAAcAAAACABAAAgAVAAkAAAACABEAAgAOAAcAAAADABEAAgAPAAcAAAAEABEAAgAOAAcAAAAFABEAAgAPAAcAAAAGABEAAgAOAAcAAAAHABEAAgAOAAcAAAAOABEAAgAPAAcAAAAPABEAAgAOAAcAAAAQABEAAgAPAAcAAAARABEAAgAOAAcAAAASABAAAgAVAAkAAAASABEAAgAPAAcAAAATABAAAgAWAAkAAAATABEAAgAOAAcAAAAUABAAAgAPAAYAAAAUABEAAgAPAAcAAAAVABAAAgAOAAYAAAAVABEAAgAOAAcAAAAWABAAAgAOAAYAAAAWABEAAgAOAAcAAAAXABAAAgAPAAYAAAAXABEAAgAPAAcAAAAYABAAAgAOAAYAAAAYABEAAgAOAAcAAAAZABAAAgAPAAYAAAAZABEAAgAPAAcAAAAaABAAAgAOAAYAAAAaABEAAgAOAAcAAAAbABAAAgAOAAYAAAAbABEAAgAOAAcAAAAcABAAAgAPAAYAAAAcABEAAgAPAAcAAAAdABAAAgAOAAYAAAAdABEAAgAOAAcAAAAeABAAAgAPAAYAAAAeABEAAgAPAAcAAAAfABAAAgAOAAYAAAAfABEAAgAOAAcAAAAgABAAAgAPAAYAAAAgABEAAgAPAAcAAAAhABAAAgAOAAYAAAAhABEAAgAOAAcAAAAiABAAAgAPAAYAAAAiABEAAgAPAAcAAAAjABAAAgAOAAYAAAAjABEAAgAOAAcAAAAkABAAAgAPAAYAAAAkABEAAgAPAAcAAAAlABAAAgAOAAYAAAAlABEAAgAOAAcAAADv/xAAAgAOAAYAAADv/xEAAgAOAAcAAADw/xAAAgAOAAYAAADw/xEAAgAOAAcAAADx/xAAAgAPAAYAAADx/xEAAgAPAAcAAADy/xAAAgAOAAYAAADy/xEAAgAOAAcAAADz/xAAAgAPAAYAAADz/xEAAgAPAAcAAAD0/xAAAgAOAAYAAAD0/xEAAgAOAAcAAAD1/xEAAgAPAAcAAAD2/xEAAgAOAAcAAAD3/xEAAgAPAAcAAAD4/xEAAgAOAAcAAAD5/xEAAgAPAAcAAAD6/xEAAgAOAAcAAAD7/xAAAgAPAAYAAAD7/xEAAgAPAAcAAAD8/xAAAgAOAAYAAAD8/xEAAgAOAAcAAAD9/xAAAgAPAAYAAAD9/xEAAgAPAAcAAAD+/xAAAgAOAAYAAAD+/xEAAgAOAAcAAAD//xAAAgAPAAYAAAD//xEAAgAPAAcAAADR/xEAAgAPAAcAAADS/xEAAgAOAAcAAADT/xEAAgAPAAcAAADU/xAAAgAOAAYAAADU/xEAAgAOAAcAAADV/xAAAgAPAAYAAADV/xEAAgAPAAcAAADW/xAAAgAOAAYAAADW/xEAAgAOAAcAAADX/xAAAgAPAAYAAADX/xEAAgAPAAcAAADY/xAAAgAOAAYAAADY/xEAAgAOAAcAAADZ/xAAAgAPAAYAAADZ/xEAAgAPAAcAAADa/xAAAgAOAAYAAADa/xEAAgAOAAcAAADb/xAAAgAPAAYAAADb/xEAAgAPAAcAAADc/xAAAgAOAAYAAADc/xEAAgAOAAcAAADd/xAAAgAPAAYAAADd/xEAAgAPAAcAAADe/xAAAgAOAAYAAADe/xEAAgAOAAcAAADf/xAAAgAPAAYAAADf/xEAAgAPAAcAAADg/xAAAgAOAAYAAADg/xEAAgAOAAcAAADh/xAAAgAPAAYAAADh/xEAAgAPAAcAAADi/xAAAgAOAAYAAADi/xEAAgAOAAcAAADj/xAAAgAPAAYAAADj/xEAAgAPAAcAAADk/xAAAgAOAAYAAADk/xEAAgAOAAcAAADl/xAAAgAPAAYAAADl/xEAAgAPAAcAAADm/xAAAgAOAAYAAADm/xEAAgAOAAcAAADn/xAAAgAPAAYAAADn/xEAAgAPAAcAAADo/xAAAgAOAAYAAADo/xEAAgAOAAcAAADp/xAAAgAOAAYAAADp/xEAAgAOAAcAAADq/xAAAgAPAAYAAADq/xEAAgAPAAcAAADr/xAAAgAOAAYAAADr/xEAAgAOAAcAAADs/xAAAgAPAAYAAADs/xEAAgAPAAcAAADt/xAAAgAOAAYAAADt/xEAAgAOAAcAAADu/xAAAgAPAAYAAADu/xEAAgAPAAcAAAAmABAAAgAPAAYAAAAmABEAAgAPAAcAAAAnABAAAgAOAAYAAAAnABEAAgAOAAcAAAAoABAAAgAPAAYAAAAoABEAAgAPAAcAAAApABAAAgAOAAYAAAApABEAAgAOAAcAAAAqABAAAgAPAAYAAAAqABEAAgAPAAcAAAArABAAAgAOAAYAAAArABEAAgAOAAcAAAAsABAAAgAPAAYAAAAsABEAAgAPAAcAAAAtABAAAgAOAAYAAAAtABEAAgAOAAcAAAAuABAAAgAPAAYAAAAuABEAAgAPAAcAAAAvABAAAgAOAAYAAAAvABEAAgAOAAcAAAAwABAAAgAPAAYAAAAwABEAAgAPAAcAAAAxABAAAgAOAAYAAAAxABEAAgAOAAcAAAAyABAAAgAPAAYAAAAyABEAAgAPAAcAAAAzABAAAgAOAAYAAAAzABEAAgAOAAcAAAA0ABAAAgAOAAYAAAA0ABEAAgAOAAcAAAA1ABAAAgAPAAYAAAA1ABEAAgAPAAcAAAA2ABAAAgAOAAYAAAA2ABEAAgAOAAcAAAA3ABAAAgAPAAYAAAA3ABEAAgAPAAcAAAA4ABAAAgAPAAYAAAA4ABEAAgAPAAcAAAA5ABAAAgAOAAYAAAA5ABEAAgAOAAcAAAA6ABAAAgAPAAYAAAA6ABEAAgAPAAcAAAA7ABAAAgAQAAYAAAA7ABEAAgAQAAcAAAD1/xAAAgAPAAYAAAD2/xAAAgAPAAYAAAD5/xAAAgAPAAYAAAD6/xAAAgAOAAYAAAD3/xAAAgAOAAYAAAD4/xAAAgAPAAYAAAD7/woAAgACAAEAAAD8/woAAgADAAEAAAD9/woAAgAEAAEAAAD+/woAAgAFAAEAAAD//woAAgAGAAEAAAADABAAAgAWAAkAAAAEAA8AAgAVAAgAAAAEABAAAgAVAAkAAAAFAA8AAgAWAAgAAAAFABAAAgAWAAkAAAAGAA0AAgAVAAgAAAAGAA4AAgAVAAgAAAAGAA8AAgAVAAgAAAAGABAAAgAVAAkAAAAHAA0AAgAWAAgAAAAHAA4AAgAWAAgAAAAHAA8AAgAWAAgAAAAHABAAAgAWAAkAAAACAA8AAgAVAAgAAAADAA8AAgAWAAgAAAAEAA0AAgAVAAgAAAAEAA4AAgAVAAkAAAAFAA0AAgAWAAgAAAAFAA4AAgAWAAkAAAAGAAsAAgAVAAgAAAAGAAwAAgAVAAkAAAAHAAsAAgAWAAgAAAAHAAwAAgAWAAkAAAAOAA0AAgAVAAgAAAAOAA4AAgAVAAgAAAAOAA8AAgAVAAgAAAAOABAAAgAVAAkAAAAPAA8AAgAWAAgAAAAPABAAAgAWAAkAAAAQAA8AAgAVAAgAAAAQABAAAgAVAAkAAAARABAAAgAWAAkAAAAOAAsAAgAVAAgAAAAOAAwAAgAVAAkAAAAPAAsAAgAWAAgAAAAPAAwAAgAWAAkAAAAPAA0AAgAWAAgAAAAPAA4AAgAWAAgAAAAQAA0AAgAVAAgAAAAQAA4AAgAVAAkAAAARAA0AAgAWAAgAAAARAA4AAgAWAAkAAAARAA8AAgAWAAgAAAASAA8AAgAVAAgAAAATAA8AAgAWAAgAAAAaAAoAAgACAAEAAAAbAAoAAgADAAEAAAAcAAoAAgAEAAEAAAAdAAoAAgAFAAEAAAAeAAoAAgAGAAEAAAAIABEAAgALAAkAAAANABEAAgAHAAkAAADR/xAAAgAPAAYAAADS/xAAAgAOAAYAAADT/xAAAgAPAAYAAADQ//X/AgASAAoAAADQ//b/AgASAAoAAADQ//f/AgASAAoAAADQ//j/AgASAAoAAADQ//n/AgASAAoAAADQ//r/AgASAAoAAADQ//v/AgASAAoAAADQ//z/AgASAAoAAADQ//3/AgASAAoAAADQ//7/AgASAAoAAADQ////AgASAAoAAADQ/wAAAgASAAoAAADQ/wEAAgASAAoAAADQ/wIAAgASAAoAAADQ/wMAAgASAAoAAADQ/wQAAgASAAoAAADQ/wUAAgASAAoAAADQ/wYAAgASAAoAAADQ/wcAAgASAAoAAADQ/wgAAgASAAoAAADQ/wkAAgASAAoAAADQ/woAAgASAAoAAADQ/wsAAgASAAoAAADQ/wwAAgASAAoAAADQ/w0AAgASAAoAAADQ/w4AAgASAAoAAADQ/w8AAgASAAoAAADQ/xAAAgASAAoAAADQ/xEAAgASAAoAAAA=")
tile_set = ExtResource("3_3pbao")

[node name="tp_bottom" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="tp_bottom"]
position = Vector2(378, 535)
shape = SubResource("RectangleShape2D_povyf")

[node name="tp_right" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="tp_right"]
position = Vector2(1898, 96.0625)
shape = SubResource("RectangleShape2D_ad3mr")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-1193, 424)

[node name="Marker2D" type="Marker2D" parent="Marker2D"]
position = Vector2(1359, -197)

[node name="Marker2D" type="Marker2D" parent="Marker2D/Marker2D"]
position = Vector2(1599, 171)
