[gd_scene load_steps=11 format=4 uid="uid://bweexqbfsm33g"]

[ext_resource type="Script" uid="uid://bgeam1jcwdm72" path="res://addons/project_plugin/scripts/Room.gd" id="1_5kub5"]
[ext_resource type="Texture2D" uid="uid://bxjo6dyswpxpr" path="res://assets/sprites/nature-paltformer-tileset-16x16_scaled_2x_pngcrushed.png" id="2_vq46n"]
[ext_resource type="Texture2D" uid="uid://bi0iwgnem1d1g" path="res://assets/tilesets/tilesets.png" id="3_sg6du"]
[ext_resource type="TileSet" uid="uid://dv0qqpljbexgc" path="res://resources/tileSets.tres" id="4_rkd4u"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8w6cp"]
load_path = "res://.godot/imported/background.png-83de924b2b0d3b2171a60b2d7a6db5e6.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qsyff"]
texture = ExtResource("2_vq46n")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uhd0x"]
texture = ExtResource("3_sg6du")
texture_region_size = Vector2i(32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:1/0 = 0
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
16:1/0 = 0
16:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
18:1/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, -16, -16, -16, 2.0079918, -1.9571247, 1.9571242, -1.9962654, 16, 16, 16)
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 2.0079918, 1.9571247, 1.9571242, 1.9962654, 16, -16, 16)
16:3/0 = 0
16:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
17:3/0 = 0
17:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
19:3/0 = 0
19:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
20:3/0 = 0
20:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
22:3/0 = 0
5:4/0 = 0
6:4/0 = 0
8:4/0 = 0
10:4/0 = 0
16:4/0 = 0
17:4/0 = 0
17:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 2.0079918, -16, 1.9955196)
19:4/0 = 0
19:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 2.0079918, -16, 1.9955196)
20:4/0 = 0
22:4/0 = 0
1:6/0 = 0
3:6/0 = 0
4:6/0 = 0
6:6/0 = 0
8:6/0 = 0
10:6/0 = 0
11:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
21:6/0 = 0
21:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:7/0 = 0
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:7/0 = 0
13:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:7/0 = 0
14:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:7/0 = 0
15:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
16:7/0 = 0
16:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
18:7/0 = 0
19:7/0 = 0
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:8/0 = 0
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:8/0 = 0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:8/0 = 0
15:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
16:8/0 = 0
16:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
21:8/0 = 0
21:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
22:8/0 = 0
22:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -16, 16, -16, -2.0079918, -1.9571247, -1.9571242, -1.9962654, -16, 16, -16)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, 16, 16, 16, -2.0079918, 1.9571247, -1.9571242, 1.9962654, -16, -16, -16)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -16, 16, -16, -2.0079918, -1.9571247, -1.9571242, -1.9962654, -16, 16, -16)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:9/0 = 0
11:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, 16, 16, 16, -2.0079918, 1.9571247, -1.9571242, 1.9962654, -16, -16, -16)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:9/0 = 0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
16:9/0 = 0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
18:9/0 = 0
19:9/0 = 0
21:9/0 = 0
21:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
22:9/0 = 0
22:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:10/0 = 0
5:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:10/0 = 0
10:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:10/0 = 0
11:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:10/0 = 0
14:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
16:10/0 = 0
16:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
18:10/0 = 0
19:10/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
3:3/0 = 0
3:4/0 = 0
2:4/0 = 0
2:3/0 = 0

[sub_resource type="TileSet" id="TileSet_btv8o"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/1 = SubResource("TileSetAtlasSource_qsyff")
sources/2 = SubResource("TileSetAtlasSource_uhd0x")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kub5"]
size = Vector2(234.75, 34.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vq46n"]
size = Vector2(90.75, 873.125)

[node name="Room" type="Node2D" node_paths=PackedStringArray("tp_right", "tp_top", "player_spawn")]
script = ExtResource("1_5kub5")
tp_right = NodePath("tp_right")
tp_top = NodePath("tp_top")
player_spawn = [NodePath("Marker2D"), NodePath("Marker2D/Marker2D")]
metadata/_custom_type_script = "uid://bgeam1jcwdm72"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -1192.0
offset_top = -147.99998
offset_right = -494.8401
offset_bottom = 28.000015
scale = Vector2(5, 5)
pivot_offset = Vector2(69.19998, 43.6)
texture = SubResource("CompressedTexture2D_8w6cp")
stretch_mode = 1

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_btv8o")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(29, -7)
tile_map_data = PackedByteArray("AAA8ABAAAgAPAAYAAAA8ABEAAgAPAAcAAAA9ABAAAgAQAAYAAAA9ABEAAgAQAAcAAADT/xAAAgAPAAYAAADT/xEAAgAPAAcAAADU/xAAAgAOAAYAAADU/xEAAgAOAAcAAADV/xAAAgAPAAYAAADV/xEAAgAPAAcAAADW/xAAAgAOAAYAAADW/xEAAgAOAAcAAADX/xAAAgAPAAYAAADX/xEAAgAPAAcAAADY/xAAAgAOAAYAAADY/xEAAgAOAAcAAADZ/xAAAgAPAAYAAADZ/xEAAgAPAAcAAADa/xAAAgAOAAYAAADa/xEAAgAOAAcAAADb/xAAAgAPAAYAAADb/xEAAgAPAAcAAADc/xAAAgAOAAYAAADc/xEAAgAOAAcAAADd/xAAAgAPAAYAAADd/xEAAgAPAAcAAADe/xAAAgAOAAYAAADe/xEAAgAOAAcAAADf/xAAAgAPAAYAAADf/xEAAgAPAAcAAADg/xAAAgAOAAYAAADg/xEAAgAOAAcAAADh/xAAAgAPAAYAAADh/xEAAgAPAAcAAADi/xAAAgAOAAYAAADi/xEAAgAOAAcAAADj/xAAAgAPAAYAAADj/xEAAgAPAAcAAADk/xAAAgAOAAYAAADk/xEAAgAOAAcAAADl/xAAAgAPAAYAAADl/xEAAgAPAAcAAADm/xAAAgAOAAYAAADm/xEAAgAOAAcAAADn/xAAAgAPAAYAAADn/xEAAgAPAAcAAADo/xAAAgAOAAYAAADo/xEAAgAOAAcAAADp/xAAAgAPAAYAAADp/xEAAgAPAAcAAADq/xAAAgAOAAYAAADq/xEAAgAOAAcAAADr/xAAAgAPAAYAAADr/xEAAgAPAAcAAADs/xAAAgAOAAYAAADs/xEAAgAOAAcAAADt/xAAAgAPAAYAAADt/xEAAgAPAAcAAADu/xAAAgAOAAYAAADu/xEAAgAOAAcAAADv/xAAAgAPAAYAAADv/xEAAgAPAAcAAADw/xAAAgAOAAYAAADw/xEAAgAOAAcAAADx/xAAAgAPAAYAAADx/xEAAgAPAAcAAADy/xAAAgAOAAYAAADy/xEAAgAOAAcAAADz/xAAAgAPAAYAAADz/xEAAgAPAAcAAAD0/xAAAgAOAAYAAAD0/xEAAgAOAAcAAAD1/xAAAgAPAAYAAAD1/xEAAgAPAAcAAAD2/xAAAgAOAAYAAAD2/xEAAgAOAAcAAAD3/xAAAgAPAAYAAAD3/xEAAgAPAAcAAAD4/xAAAgAOAAYAAAD4/xEAAgAOAAcAAAD5/xAAAgAPAAYAAAD5/xEAAgAPAAcAAAD6/xAAAgAOAAYAAAD6/xEAAgAOAAcAAAD7/xAAAgAPAAYAAAD7/xEAAgAPAAcAAAD8/xAAAgAOAAYAAAD8/xEAAgAOAAcAAAD9/xAAAgAPAAYAAAD9/xEAAgAPAAcAAAD+/xAAAgAOAAYAAAD+/xEAAgAOAAcAAAD//xAAAgAPAAYAAAD//xEAAgAPAAcAAAAAABAAAgAOAAYAAAAAABEAAgAOAAcAAAABABAAAgAPAAYAAAABABEAAgAPAAcAAAACABAAAgAOAAYAAAACABEAAgAOAAcAAAADABAAAgAPAAYAAAADABEAAgAPAAcAAAAEABAAAgAOAAYAAAAEABEAAgAOAAcAAAAFABAAAgAPAAYAAAAFABEAAgAPAAcAAAAGABAAAgAOAAYAAAAGABEAAgAOAAcAAAAHABAAAgAPAAYAAAAHABEAAgAPAAcAAAAIABAAAgAOAAYAAAAIABEAAgAOAAcAAAAJABAAAgAPAAYAAAAJABEAAgAPAAcAAAAKABAAAgAOAAYAAAAKABEAAgAOAAcAAAALABAAAgAPAAYAAAALABEAAgAPAAcAAAAMABAAAgAOAAYAAAAMABEAAgAOAAcAAAANABAAAgAPAAYAAAANABEAAgAPAAcAAAAOABAAAgAOAAYAAAAOABEAAgAOAAcAAAAPABAAAgAPAAYAAAAPABEAAgAPAAcAAAAQABAAAgAOAAYAAAAQABEAAgAOAAcAAAARABAAAgAPAAYAAAARABEAAgAPAAcAAAASABAAAgAOAAYAAAASABEAAgAOAAcAAAATABAAAgAPAAYAAAATABEAAgAPAAcAAAAUABAAAgAOAAYAAAAUABEAAgAOAAcAAAAVABAAAgAPAAYAAAAVABEAAgAPAAcAAAAWABAAAgAOAAYAAAAWABEAAgAOAAcAAAAXABAAAgAPAAYAAAAXABEAAgAPAAcAAAAYABAAAgAOAAYAAAAYABEAAgAOAAcAAAAZABAAAgAPAAYAAAAZABEAAgAPAAcAAAAaABAAAgAOAAYAAAAaABEAAgAOAAcAAAAbABAAAgAPAAYAAAAbABEAAgAPAAcAAAAcABAAAgAOAAYAAAAcABEAAgAOAAcAAAAdABAAAgAPAAYAAAAdABEAAgAPAAcAAAAeABAAAgAOAAYAAAAeABEAAgAOAAcAAAAfABAAAgAPAAYAAAAfABEAAgAPAAcAAAAgABAAAgAOAAYAAAAgABEAAgAOAAcAAAAhABAAAgAPAAYAAAAhABEAAgAPAAcAAAAiABAAAgAOAAYAAAAiABEAAgAOAAcAAAAjABAAAgAPAAYAAAAjABEAAgAPAAcAAAAkABAAAgAOAAYAAAAkABEAAgAOAAcAAAAlABAAAgAPAAYAAAAlABEAAgAPAAcAAAAmABAAAgAOAAYAAAAmABEAAgAOAAcAAAAnABAAAgAPAAYAAAAnABEAAgAPAAcAAAAoABAAAgAOAAYAAAAoABEAAgAOAAcAAAApABAAAgAPAAYAAAApABEAAgAPAAcAAAAqABAAAgAOAAYAAAAqABEAAgAOAAcAAAArABAAAgAPAAYAAAArABEAAgAPAAcAAAAsABAAAgAOAAYAAAAsABEAAgAOAAcAAAAtABAAAgAPAAYAAAAtABEAAgAPAAcAAAAuABAAAgAOAAYAAAAuABEAAgAOAAcAAAAvABAAAgAPAAYAAAAvABEAAgAPAAcAAAAwABAAAgAOAAYAAAAwABEAAgAOAAcAAAAxABAAAgAPAAYAAAAxABEAAgAPAAcAAAAyABAAAgAOAAYAAAAyABEAAgAOAAcAAAAzABAAAgAPAAYAAAAzABEAAgAPAAcAAAA0ABAAAgAOAAYAAAA0ABEAAgAOAAcAAAA1ABAAAgAPAAYAAAA1ABEAAgAPAAcAAAA2ABAAAgAOAAYAAAA2ABEAAgAOAAcAAAA3ABAAAgAPAAYAAAA3ABEAAgAPAAcAAAA4ABAAAgAOAAYAAAA4ABEAAgAOAAcAAAA5ABAAAgAPAAYAAAA5ABEAAgAPAAcAAAA6ABAAAgAOAAYAAAA6ABEAAgAOAAcAAAA7ABAAAgAPAAYAAAA7ABEAAgAPAAcAAADR/xAAAgASAAoAAADR/xEAAgANAAcAAADS/xAAAgATAAoAAADS/xEAAgAOAAcAAADR//b/AgASAAgAAADR//f/AgASAAkAAADR//j/AgASAAoAAADS//b/AgATAAgAAADS//f/AgATAAkAAADS//j/AgATAAoAAADR//n/AgASAAcAAADR//r/AgASAAgAAADR//v/AgASAAkAAADR//z/AgASAAoAAADS//n/AgATAAcAAADS//r/AgATAAgAAADS//v/AgATAAkAAADS//z/AgATAAoAAADR//3/AgASAAcAAADR//7/AgASAAgAAADR////AgASAAkAAADR/wAAAgASAAoAAADS//3/AgATAAcAAADS//7/AgATAAgAAADS////AgATAAkAAADS/wAAAgATAAoAAADR/wEAAgASAAcAAADR/wIAAgASAAgAAADR/wMAAgASAAkAAADR/wQAAgASAAoAAADS/wEAAgATAAcAAADS/wIAAgATAAgAAADS/wMAAgATAAkAAADS/wQAAgATAAoAAADR/wUAAgASAAcAAADR/wYAAgASAAgAAADR/wcAAgASAAkAAADR/wgAAgASAAoAAADS/wUAAgATAAcAAADS/wYAAgATAAgAAADS/wcAAgATAAkAAADS/wgAAgATAAoAAADR/wkAAgASAAcAAADR/woAAgASAAgAAADR/wsAAgASAAkAAADR/wwAAgASAAoAAADS/wkAAgATAAcAAADS/woAAgATAAgAAADS/wsAAgATAAkAAADS/wwAAgATAAoAAADR/w0AAgASAAcAAADR/w4AAgASAAgAAADR/w8AAgASAAkAAADS/w0AAgATAAcAAADS/w4AAgATAAgAAADS/w8AAgATAAkAAAD1/wUAAgACAAEAAAD2/wUAAgADAAEAAAD3/wUAAgAIAAEAAAD4/wUAAgAIAAEAAAD5/wUAAgAIAAEAAAD6/wUAAgAIAAEAAAD7/wUAAgAIAAEAAAD8/wUAAgAIAAEAAAD9/wUAAgAIAAEAAAD+/wUAAgAIAAEAAAD//wUAAgAIAAEAAAAAAAUAAgAIAAEAAAABAAUAAgAIAAEAAAACAAUAAgAIAAEAAAADAAUAAgAIAAEAAAAEAAUAAgAIAAEAAAAFAAUAAgAIAAEAAAAGAAUAAgAIAAEAAAAHAAUAAgAIAAEAAAAIAAUAAgAIAAEAAAAJAAUAAgAIAAEAAAAKAAUAAgAIAAEAAAALAAUAAgAIAAEAAAAMAAUAAgAIAAEAAAANAAUAAgAIAAEAAAAOAAUAAgAIAAEAAAAPAAUAAgAIAAEAAAAQAAUAAgAIAAEAAAARAAUAAgAIAAEAAAASAAUAAgAIAAEAAAATAAUAAgAIAAEAAAAUAAUAAgAIAAEAAAAVAAUAAgAIAAEAAAAWAAUAAgAIAAEAAAAXAAUAAgAIAAEAAAAYAAUAAgAIAAEAAAAZAAUAAgAIAAEAAAAaAAUAAgAIAAEAAAAbAAUAAgAIAAEAAAAcAAUAAgAIAAEAAAAdAAUAAgAIAAEAAAAeAAUAAgAIAAEAAAAfAAUAAgAFAAEAAAAgAAUAAgAGAAEAAADp/wwAAgACAAEAAADq/wwAAgADAAEAAADr/wwAAgAIAAEAAADs/wwAAgAIAAEAAADt/wwAAgAIAAEAAADu/wwAAgAIAAEAAADv/wwAAgAIAAEAAADw/wwAAgAIAAEAAADx/wwAAgAIAAEAAADy/wwAAgAIAAEAAADz/wwAAgAIAAEAAAD0/wwAAgAIAAEAAAD1/wwAAgAFAAEAAAD2/wwAAgAGAAEAAAAfAAwAAgACAAEAAAAgAAwAAgADAAEAAAAhAAwAAgAIAAEAAAAiAAwAAgAIAAEAAAAjAAwAAgAIAAEAAAAkAAwAAgAIAAEAAAAlAAwAAgAIAAEAAAAmAAwAAgAIAAEAAAAnAAwAAgAIAAEAAAAoAAwAAgAIAAEAAAApAAwAAgAIAAEAAAAqAAwAAgAIAAEAAAArAAwAAgAFAAEAAAAsAAwAAgAGAAEAAAACAP//AgACAAEAAAADAP//AgADAAEAAAAEAP//AgAIAAEAAAAFAP//AgAIAAEAAAAGAP//AgAIAAEAAAAHAP//AgAIAAEAAAAIAP//AgAIAAEAAAAJAP//AgAIAAEAAAAKAP//AgAIAAEAAAALAP//AgAIAAEAAAAMAP//AgAIAAEAAAANAP//AgAIAAEAAAAOAP//AgAFAAEAAAAPAP//AgAGAAEAAAA=")
tile_set = ExtResource("4_rkd4u")
metadata/_edit_group_ = true

[node name="tp_top" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="tp_top"]
position = Vector2(316, -305.125)
shape = SubResource("RectangleShape2D_5kub5")

[node name="tp_right" type="Area2D" parent="."]
position = Vector2(1622, 379)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="tp_right"]
position = Vector2(345, -282)
shape = SubResource("RectangleShape2D_vq46n")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1863, 426)

[node name="Marker2D" type="Marker2D" parent="Marker2D"]
position = Vector2(-1532, -583)
